adding logic for grpc
